--- a/Курсовая/Курсовая.vcxproj.filters
+++ b/Курсовая/Курсовая.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Figure.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Field.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Figure.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Field.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
